--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Todo - Compose</string>
     <string name="add_button">Add Button</string>
+    <string name="search_action">Search Tasks</string>
 </resources>
