--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Todo - Compose</string>
     <string name="add_button">Add Button</string>
     <string name="search_action">Search Tasks</string>
+    <string name="sort_tasks">Sort Tasks</string>
+    <string name="delete_all_action">Delete All</string>
+    <string name="delete_action">Delete Action</string>
 </resources>
