Added Task Content for adding new tasks, changed Priority Drop down shape to match the outlined material ui textfields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="task_delete_action_icon">Delete Icon</string>
     <string name="task_update_button_icon">Update Icon</string>
     <string name="drop_down_arrow">Drop Down Arrow Icon</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
 </resources>
