--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="delete_all_tasks">Remove All Tasks?</string>
     <string name="delete_all_tasks_confirmation">Are you sure you want to remove all Tasks? There is no going back after this action.</string>
     <string name="swipe_button_delete">Delete Swipe Icon</string>
+    <string name="splash_screen_logo">Logo For Splash Screen</string>
 </resources>
